--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="container">
           <h1 class="page-text">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button">Order Service</button>
+          <button data-modal-open class="hero-button" type="button">Order Service</button>
         </div>
 
        </section>
@@ -416,5 +416,11 @@
 
 </div>
 </footer>
+
+<div class="backdrop" data-modal>
+  <div class="modal"></div>
+</div>
+
+<script src="./js/modal.js"></script>
   </body>
 </html>
