--- a/index.html
+++ b/index.html
@@ -418,7 +418,21 @@
 </footer>
 
 <div class="backdrop" data-modal>
-  <div class="modal"></div>
+  <div class="modal">
+    <p class="modal-text">Leave your contacts and we will call you back</p>
+    <button class="close-modal" type="button">
+      <svg class="close-modal-icon" width="24" height="24">
+        <use href="./images/icons.svg#icon-close-black"></use>
+      </svg>
+    </button>
+
+    <form>
+      <div>
+        <label for="usernete">Name</label>
+        <input type="text" id="eserneme" name="esername">
+      </div>
+    </form>
+  </div>
 </div>
 
 <script src="./js/modal.js"></script>
