--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <p class="modal-text">Leave your contacts and we will call you back</p>
     <button class="close-modal" type="button">
       <svg class="close-modal-icon" width="24" height="24">
-        <use href="./images/icons.svg#icon-close-black"></use>
+        <use href="./images/icons.svg#icon-button-close"></use>
       </svg>
     </button>
 
