--- a/index.html
+++ b/index.html
@@ -421,17 +421,53 @@
   <div class="modal">
     <p class="modal-text">Leave your contacts and we will call you back</p>
     <button class="close-modal" type="button">
-      <svg class="close-modal-icon" width="24" height="24">
+      <svg class="close-modal-icon" width="8" height="8">
         <use href="./images/icons.svg#icon-button-close"></use>
       </svg>
     </button>
+<form>
+  <div class="form-field-wrapper">
+    <label class="label-field" for="user-name">Name</label>
+    <div class="field-wrapper">
+      <input class="text-field" type="text" id="user-name" name="user-name">
+      <svg class="field-icon" width="18" height="24">
+        <use href="./images/icons.svg#icon-user"></use>
+      </svg>
+    </div>
+  </div>
 
-    <form>
-      <div>
-        <label for="usernete">Name</label>
-        <input type="text" id="eserneme" name="esername">
-      </div>
-    </form>
+  <div class="form-field-wrapper">
+    <label class="label-field" for="user-phone">Phone</label>
+    <div class="field-wrapper">
+      <input class="text-field" type="phone" id="user-phone" name="user-phone">
+      <svg class="field-icon" width="18" height="24">
+        <use href="./images/icons.svg#icon-phone"></use>
+      </svg>
+    </div>
+  </div>
+
+  <div class="form-field-wrapper">
+    <label class="label-field" for="user-email">Email</label>
+    <div class="field-wrapper">
+      <input class="text-field" type="email" id="user-email" name="user-email">
+      <svg class="field-icon" width="18" height="24">
+        <use href="./images/icons.svg#icon-mail"></use>
+      </svg>
+    </div>
+  </div>
+
+  <div class="form-field-wrapper">
+    <label class="label-field" for="comment">Commemt</label>
+    <textarea class="text-comment" name="comment" id="comment" placeholder="Text input"></textarea>
+  </div>
+
+  <div class="form-field-wrapper">
+    <input type="checkbox" id="user-privacy" name="user-privacy" value="true" class="visually-hidden">
+    <label for="user-privacy">I accept the terms and conditions of the<span class="" <a href="" class="accent">Privacy policy</s></label>
+  </div>
+  <button type="submit">Send</button>
+</form>
+    
   </div>
 </div>
 
