--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 <div class="backdrop" data-modal>
   <div class="modal">
     <p class="modal-text">Leave your contacts and we will call you back</p>
-    <button class="close-modal" type="button">
+    <button class="close-modal-button" type="button">
       <svg class="close-modal-icon" width="8" height="8">
         <use href="./images/icons.svg#icon-button-close"></use>
       </svg>
