--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
   <div class="form-field-wrapper">
     <label class="label-field" for="user-phone">Phone</label>
     <div class="field-wrapper">
-      <input class="text-field" type="phone" id="user-phone" name="user-phone">
+      <input class="text-field" type="tel" id="user-phone" name="user-phone">
       <svg class="field-icon" width="18" height="24">
         <use href="./images/icons.svg#icon-phone"></use>
       </svg>
@@ -463,7 +463,7 @@
 
   <div class="form-field-wrapper">
     <input type="checkbox" id="user-privacy" name="user-privacy" value="true" class="visually-hidden">
-    <label for="user-privacy">I accept the terms and conditions of the<span class="" <a href="" class="accent">Privacy policy</s></label>
+    <label for="user-privacy">I accept the terms and conditions of the<span class="" ></span><a href="" class="accent">Privacy policy</a></label>
   </div>
   <button type="submit">Send</button>
 </form>
