--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
   </div>
 
   <div class="form-field-wrapper">
-    <label class="label-field" for="comment">Commemt</label>
-    <textarea class="text-comment" name="comment" id="comment" placeholder="Text input"></textarea>
+    <label class="label-field" for="user-comment">Comment</label>
+    <textarea class="text-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
   </div>
 
   <div class="form-field-wrapper">
