--- a/index.html
+++ b/index.html
@@ -417,14 +417,15 @@
 </div>
 </footer>
 
-<div class="backdrop" data-modal>
+<div class="backdrop is-open" data-modal>
   <div class="modal">
-    <p class="modal-text">Leave your contacts and we will call you back</p>
+
     <button class="close-modal-button" type="button">
       <svg class="close-modal-icon" width="8" height="8">
         <use href="./images/icons.svg#icon-button-close"></use>
       </svg>
     </button>
+    <p class="modal-text">Leave your contacts and we will call you back</p>
 <form>
   <div class="form-field-wrapper">
     <label class="label-field" for="user-name">Name</label>
