--- a/index.html
+++ b/index.html
@@ -414,6 +414,19 @@
     </ul>
   </div>
 
+  <div class="footer-input-wrapper">
+    <p class="footer-input-title">Subscribe</p>
+      <form class="footer-form">
+        <label class="footer-label-input" for="subscribe-email">
+          <input type="email" id="subscribe-email" name="subscribe-email" class="footer-input" placeholder="E-mail"/><span class="visually-hidden">User email</span></label>
+            <button type="submit" class="button-submit-footer">Subscribe
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+
 </div>
 </footer>
 
@@ -462,11 +475,16 @@
     <textarea class="text-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
   </div>
 
-  <div class="form-field-wrapper">
+  <div class="agreement">
     <input type="checkbox" id="user-privacy" name="user-privacy" value="true" class="visually-hidden">
-    <label for="user-privacy">I accept the terms and conditions of the<span class="" ></span><a href="" class="accent">Privacy policy</a></label>
+    <label for="user-privacy" class="label-agreement">
+      <span class="agreement-checkbox" >
+        <svg class="icon-checkbox" width="10" height="8">
+        <use href="./images/icons.svg#icon-checkbox"></use>
+      </svg>
+      </span>I accept the terms and conditions of the<a href="" class="accent">Privacy policy</a></label>
   </div>
-  <button type="submit">Send</button>
+  <button type="submit" class="hero-button button-submit">Send</button>
 </form>
     
   </div>
