--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
       </svg>
       </span>I accept the terms and conditions of the<a href="" class="accent">Privacy policy</a></label>
   </div>
-  <button type="submit" class="hero-button button-submit">Send</button>
+  <button type="submit" class="hero-button">Send</button>
 </form>
     
   </div>
