--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <svg class="icon-checkbox" width="10" height="8">
         <use href="./images/icons.svg#icon-checkbox"></use>
       </svg>
-      </span>I accept the terms and conditions of the<a href="" class="accent">Privacy policy</a></label>
+      </span>I accept the terms and conditions of the<a href="" class="accent">Privacy Policy</a></label>
   </div>
   <button type="submit" class="hero-button">Send</button>
 </form>
