--- a/index.html
+++ b/index.html
@@ -470,13 +470,13 @@
     </div>
   </div>
 
-  <div class="form-field-wrapper">
+  <div class="form-field-wrapper-textarea">
     <label class="label-field" for="user-comment">Comment</label>
     <textarea class="text-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
   </div>
 
   <div class="agreement">
-    <input type="checkbox" id="user-privacy" name="user-privacy" value="true" class="visually-hidden">
+    <input type="checkbox-input" id="user-privacy" name="user-privacy" value="true" class="visually-hidden">
     <label for="user-privacy" class="label-agreement">
       <span class="agreement-checkbox" >
         <svg class="icon-checkbox" width="10" height="8">
