--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
   </div>
 
   <div class="agreement">
-    <input type="checkbox-input" id="user-privacy" name="user-privacy" value="true" class="visually-hidden">
+    <input type="checkbox" id="user-privacy" name="user-privacy" value="true" class="visually-hidden">
     <label for="user-privacy" class="label-agreement">
       <span class="agreement-checkbox" >
         <svg class="icon-checkbox" width="10" height="8">
